WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206135
Fix internal Apple builds after
r254389
https://bugs.webkit.org/show_bug.cgi?id=206135
Summary
Fix internal Apple builds after r254389
Myles C. Maxfield
Reported
2020-01-11 17:43:50 PST
Fix internal Apple builds after
r254389
Attachments
Patch
(1.29 KB, patch)
2020-01-11 18:02 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(1.29 KB, patch)
2020-01-11 22:11 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2020-01-11 18:02:59 PST
Created
attachment 387450
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-11 18:05:48 PST
Comment on
attachment 387450
[details]
Patch Rejecting
attachment 387450
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 387450, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Alan Bujtas found in /Volumes/Data/EWS/WebKit/Source/WTF/ChangeLog does not appear to be a valid reviewer according to contributors.json. /Volumes/Data/EWS/WebKit/Source/WTF/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
https://webkit-queues.webkit.org/results/13303242
Myles C. Maxfield
Comment 3
2020-01-11 22:11:26 PST
Created
attachment 387454
[details]
Patch
WebKit Commit Bot
Comment 4
2020-01-11 22:57:55 PST
Comment on
attachment 387454
[details]
Patch Clearing flags on attachment: 387454 Committed
r254411
: <
https://trac.webkit.org/changeset/254411
>
WebKit Commit Bot
Comment 5
2020-01-11 22:57:57 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2020-01-11 22:58:13 PST
<
rdar://problem/58509206
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug