Fix internal Apple builds after r254389 https://bugs.webkit.org/show_bug.cgi?id=206135

Rubber stamped by Zalan Bujtas.

* wtf/spi/cocoa/NSLocaleSPI.h:


Canonical link: https://commits.webkit.org/219244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254411 268f45cc-cd09-0410-ab3c-d52691b4dbfc